--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.resources.static-locations=classpath:/static
 server.port=8000
 
-#设置上传图片的路径
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u03F4\uFFFD\u037C\u01AC\uFFFD\uFFFD\u00B7\uFFFD\uFFFD
 file.basepath=D:/BaiduNetdiskDownload/
 
-# 设置单个文件大小
+# \uFFFD\uFFFD\uFFFD\u00F5\uFFFD\uFFFD\uFFFD\uFFFD\u013C\uFFFD\uFFFD\uFFFD\u0421
 spring.servlet.multipart.max-file-size= 50MB
-# 设置单次请求文件的总大小
+# \uFFFD\uFFFD\uFFFD\u00F5\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u013C\uFFFD\uFFFD\uFFFD\uFFFD\u0734\uFFFD\u0421
 spring.servlet.multipart.max-request-size= 50MB
 
-##设置要连接的mysql数据库
+##\uFFFD\uFFFD\uFFFD\uFFFD\u04AA\uFFFD\uFFFD\uFFFD\u04F5\uFFFDmysql\uFFFD\uFFFD\uFFFD\u077F\uFFFD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://v81:3306/ibmp?characterEncoding=utf8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=root
