--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://v81:3306/ibmp?characterEncoding=utf8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=root
+
+
+# ----------------------------------------
+# minio \u6587\u4EF6\u5B58\u50A8
+# ----------------------------------------
+minio.enable=true
+minio.endpoint=http://172.16.4.85
+minio.port=9000
+minio.accessKey=AKIAIOSFODNN7EXAMPLE
+minio.secretKey=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
